--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="container">
         <h2>Jogo da memoria</h2>
         <div class="jogo"></div>
+        <span class="timer">Tempo: 00:00</span>
+        <span class="movimento">Movimentos: 0</span>
         <button class="restart" onclick="window.location.reload();">Resetar Tabuleiro</button>
     </div>
 </body>
